# crumbs

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h  config.h.in  configure  configure.ac  crumbs-completion.bash  crumbs-completion.fish  crumbs.c  crumbs.conf  crumbs.h  crumbs.man
doc/: crumbs.man
